# creduce

./: CMakeLists.txt  INSTALL.md  README.md  USAGE.md
clang_delta/: AggregateToScalar.cpp  CMakeLists.txt  ClangDelta.cpp  ClassTemplateToClass.cpp  ClassTemplateToClass.h  EmptyStructToInt.cpp  InstantiateTemplateParam.cpp  InstantiateTemplateTypeParamToInt.cpp  LocalToGlobal.cpp  MoveFunctionBody.cpp  MoveFunctionBody.h  ParamToGlobal.cpp  ReduceClassTemplateParameter.cpp  ReducePointerLevel.cpp  ReducePointerPairs.cpp  RemoveAddrTaken.cpp  RemoveBaseClass.cpp  RemoveCtorInitializer.cpp  RemoveDecl.cpp  RemoveDecl.h  RemoveNamespace.cpp  RemoveNestedFunction.cpp  RemoveTrivialBaseTemplate.cpp  RemoveUnresolvedBase.cpp  RemoveUnusedFunction.cpp  RemoveUnusedOuterClass.cpp  RenameClass.cpp  RenameVar.cpp  ReplaceClassWithBaseTemplateSpec.cpp  ReplaceDependentName.cpp  ReplaceDependentTypedef.cpp  ReplaceDerivedClass.cpp  ReplaceFunctionDefWithDecl.cpp  ReplaceSimpleTypedef.cpp  RewriteUtils.cpp  RewriteUtils.h  SimplifyBody.cpp  SimplifyBody.h  SimplifyDependentTypedef.cpp  SimplifyIf.cpp  (+10 more)
clang_delta/test/: CMakeLists.txt  ClassTemplateToClass.cpp  LocalToGlobal.cpp  MoveFunctionBody.cpp  ParamToGlobal.cpp  ParamToLocal.cpp  ReduceClassTemplateParameter.cpp  ReducePointerLevel.cpp  RemoveDecl.cpp  RemoveNamespace.cpp  RemoveNamespace_IllFormed.cpp  RemoveTrivialBaseTemplate.cpp  RemoveUnusedOuterClass.cpp  SimplifyBody.cpp  SimplifyBody_IllFormed.cpp  SimplifyIf_IllFormed.cpp  TemplateArgToInt.cpp  TemplateNonTypeArgToInt.cpp  lit.cfg  lit.site.cfg.in  sanity.cpp
creduce/: CMakeLists.txt  creduce.in  pass_empty_files.pm  pass_empty_folders.pm  pass_include_includes.pm
delta/: CMakeLists.txt
scripts/: reduce_include_folders.sh
unifdef/: CMakeLists.txt
